[project]
name = "hw4-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.7.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "rich==13.8.1",
    "scikit-learn-intelex>=2024.7.0",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "seaborn==0.13.1",
    "statsmodels>=0.14.3",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
